refactor: effect id wrapper